fix: li wrapped in ul

--- a/userManagement/src/index.css
+++ b/userManagement/src/index.css
@@ -5,3 +5,7 @@
 li{
   list-style: none;
 }
+ul{
+  margin: 0;
+  padding: 0;
+}
