--- a/userManagement/src/style/userManagement.css
+++ b/userManagement/src/style/userManagement.css
@@ -22,3 +22,7 @@ h2{
 .user:hover{
   background-color: lightgray;
 }
+.user__buttons{
+  display: flex;
+  gap: 5px;
+}
